# python-log-router

./: .gitignore  CONTRIBUTING.md  MAINTAINERS.md  README.md  pyproject.toml
examples/handlers_by_discriminant_value/: custom_handlers.py  handlers_by_discriminant_value.py  logging_conf.yaml
examples/log_by_thread/: log_by_thread.py  logging_conf.yaml
examples/simple_usage/: logging_conf.yaml  simple_usage.py
logrouter/: default_logging_conf.yaml  logrouter.py  setup_logging.py
